RAP-4137: fix search suggestion layout issue
absolutely position search suggestions container

--- a/app_storefront_core/cartridge/scss/default/_search_suggest_beta.scss
+++ b/app_storefront_core/cartridge/scss/default/_search_suggest_beta.scss
@@ -3,7 +3,9 @@
 	background-color: $white;
 	border: 1px solid $nobel;
 	box-shadow: 0 3px 3px 0 rgba(0,0,0,.25);
+	position: absolute;
 	width: 100%;
+	z-index: 1;
 	@media screen and (min-width: 768px) {
 		&.full {
 			margin-left: -75%;
