--- a/app_storefront_core/cartridge/scss/default/header/_header.scss
+++ b/app_storefront_core/cartridge/scss/default/header/_header.scss
@@ -46,6 +46,9 @@
 		width: 300px;
 		z-index: 1;
 	}
+	form {
+		margin-bottom: 1px;
+	}
 	input[type="text"] {
 		background-color: transparent;
 		border: none;
